--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -7,14 +7,14 @@
   justify-content: center;
   min-height: 70vh;
   flex-direction: column;
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  background-color:white;
+  background-image: linear-gradient(0deg, #ffdee9 0%, white 100%);
 }
 
 .form-container form {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
-  background-color: #fff;
+  background-color:gray;
 }
 
 .form-container form .title {
@@ -60,4 +60,11 @@
 
 .forgot-btn:hover {
   color: white !important;
+}
+.form-container p{
+  color: gainsboro;
+}
+
+.form-container .log{
+  color:whitesmoke;
 }
